@@ -1,39 +1,42 @@
 // Copyright (C) 2003 Johan Hoffman and Anders Logg.
 // Licensed under the GNU GPL Version 2.
 
+#ifndef __EVENT_H
+#define __EVENT_H
+
 #include <string>
 
 namespace dolfin
 {
 
-  /// A message is a string message which is displayed
+  /// A event is a string message which is displayed
   /// only a limited number of times.
   ///
   /// Example of usage:
   ///
-  ///   Message message("System is stiff, damping is needed.");
+  ///   Event event("System is stiff, damping is needed.");
   ///   while ()
   ///   {
   ///     ...
   ///     if ( ... )
   ///     {
-  ///       message.display();
+  ///       event();
   ///       ...
   ///     }
   ///   }
 
-  class Message
+  class Event
   {
   public:
 
     /// Constructor
-    Message(const std::string message, unsigned int maxcount = 1);
+    Event(const std::string message, unsigned int maxcount = 1);
 
     /// Destructor
-    ~Message();
+    ~Event();
 
     /// Display message
-    void display();
+    void operator() ();
     
     /// Display count
     unsigned int count() const;
@@ -50,3 +53,5 @@ namespace dolfin
   };
 
 }
+
+#endif
