@@ -1,12 +1,12 @@
 EXTRA_DIST = dolfin_log.h \
              Buffer.h \
              CursesLogger.h \
+             Message.h \
              GenericLogger.h \
              Logger.h \
              LoggerMacros.h \
              LogManager.h \
              LogStream.h \
-             Message.h \
              Progress.h \
              SilentLogger.h \
              TerminalLogger.h
